solr-setup/aws-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: solr-ingress
  namespace: $SOLR_ENV
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: $SOLR_VPC_SUBNETS
    alb.ingress.kubernetes.io/healthcheck-path: /solr
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/group.name: $SOLR_ENV-solr-alb
    alb.ingress.kubernetes.io/certificate-arn: $SOLR_ALB_CERT_ARN
    alb.ingress.kubernetes.io/security-groups: $SOLR_ALB_SEC_GRPS
  labels:
    app: solr-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: solr
              servicePort: 8983
